# pyMCL

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  environment.yaml  environment.yml  pyproject.toml
docs/: Installation.rst  Quickstart.rst  conf.py  index.rst  modules.rst  my_pyMCL.rst  pyMCL.rst  requirements.txt
my_pyMCL/: __init__.py
pyMCL/: __init__.py  jax_pymcl.py  jax_testing.ipynb  pymcl.py
src/: pyMCL.py
tests/: test_pymcl.py
