[project]
name = "pyMCL"
description = "A python package to perform the Markov Cluster Algorithm (MCL)"
authors = [{name = "Tristen Jay Mier"}]
version = "0.1.0"

keywords = [
  "mcl", "mcl algorithm", "Markov Cluster", "network", 
  "network communities", "network clustering",
  "bioinformatics", "graph clustering",

  ]

requires-python = ">=3.9"
dependencies = [
  "numpy >= 2.0",
  "pandas >= 2.0",
]


readme = "README.md"
license = {"file" = "LICENSE"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
test = [
  "pytest",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
]

[project.urls]
repository = "https://github.com/tjmier/pyMCL"
documentation = "https://www.example.com/docs"

[tool.ruff]

target-version = "py311"
select = [
    "ALL", # include all the rules, including new ones
]
# The list of rules to ignore.
ignore = [
    "COM812", # ignore missing trailing comma in a single-line list.
    "D103",   # ignore missing docstring in public function.
    "D205",   # ignore 1 blank line required between summary line and description.
    "D212",   # ignore multi-line docstring summary should start at the first line.
    "D401",   # ignore first line should be in imperative mood.
    "TRY003", # ignore verbose exception messages in try/except blocks.
    "RET504", # ignore missing return type in public"
    "PLR0913", # ignore multiple imports on one line

]
# List of rules to ignore in testing directory
[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # ignore use of assert
    "ANN001", # ignore missing type annotation for self in method
    'ANN201', # ignore missing type annotation for self in method
    "E501",   # ignore line too long
]
"docs/*" = [
    "ALL", # ignore all rules in docs
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "tests",
  "environment.yaml",
  # .github, .gitignore, .gitattributes
  ".git*",
]